fixed custom scrollbar height

--- a/src/PokerLeagueManager.UI.Web/angular/src/app/create-game/create-game.component.scss
+++ b/src/PokerLeagueManager.UI.Web/angular/src/app/create-game/create-game.component.scss
@@ -11,5 +11,5 @@ button.add-player {
 }
 
 ngx-simplebar {
-  height: 200px;
+  height: 100%;
 }
